--- a/top-5-things-to-know-in-advanced-sql/Dockerfile
+++ b/top-5-things-to-know-in-advanced-sql/Dockerfile
@@ -1,6 +1,10 @@
-FROM python:3
+FROM python:3.9
 
 WORKDIR /usr/src/sandbox
+
+COPY ingest_data.py ingest_data.py
+
+ENTRYPOINT ["python", "ingest_data.py"]
 
 # COPY requirements.txt ./
 # RUN pip install --no-cache-dir -r requirements.txt
